tests/ui/invalid_pymethod_names.stderr
error: `name` may only be specified once
  --> tests/ui/invalid_pymethod_names.rs:11:14
   |
11 |     #[getter(number)]
   |              ^^^^^^

error: `name` may only be specified once
  --> tests/ui/invalid_pymethod_names.rs:19:12
   |
19 |     #[pyo3(name = "bar")]
   |            ^^^^

error: `name` not allowed with `#[new]`
  --> tests/ui/invalid_pymethod_names.rs:26:19
   |
26 |     #[pyo3(name = "makenew")]
   |                   ^^^^^^^^^

error: expected ident or string literal for property name
  --> tests/ui/invalid_pymethod_names.rs:34:14
   |
34 |     #[getter(1)]
   |              ^

error: expected `#[getter(name)]` to set the name
  --> tests/ui/invalid_pymethod_names.rs:41:14
   |
41 |     #[getter = 1]
   |              ^

error: aborting due to 5 previous errors

